# yage

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Folder.DotSettings  README.md  yage.ruleset
demo/ModelViewer/: CMakeLists.txt  ModelViewerApp.cpp  ModelViewerApp.h  MovementListener.cpp  MovementListener.h  ProjectionView.cpp  ProjectionView.h  app.h  main.cpp
demo/ModelViewer/assets/models/: sphere.gltf
source/: CMakeLists.txt
source/core/: CMakeLists.txt  README.md
source/core/docs/: uml.drawio
source/core/gl/: CMakeLists.txt
source/core/gl/gl/: Context.h  DrawableCreator.h  Texture2D.h  TextureCreator.h  graphics.h
source/core/gl/tests/: CMakeLists.txt  contextTest.cpp  cubemapTest.cpp  textureTest.cpp
source/core/gml/: CMakeLists.txt
source/core/gml/gml/: gml.h  maths.h  matrix.h  quaternion.h  vector.h
source/core/gml/tests/: CMakeLists.txt  complex.h  main.cpp  matXTest.cpp  mathTest.cpp  matrixSpecialTest.cpp  matrixTest.cpp  quaternionTest.cpp  vec2Test.cpp  vec3Test.cpp  vecXTest.cpp  vectorTest.cpp
source/core/graphics/: Color.h  Context.h  Cubemap.h  Drawable.h  DrawableCreator.h  Enum.h  Frame.h  Framebuffer.h  GType.h  Graphics.h  ImageFormat.h  PixelTransfer.h  Platform.h  Renderer.h  Shader.cpp  Shader.h  ShaderCreator.h  ShaderLoader.h  Texture2D.h  Texture3D.h  TextureCreator.h  color.h  gl.h  graphics.h  renderer.h  test.cpp
source/core/graphics/GL3/: GL3_Context.cpp  GL3_Context.h  GL3_Cubemap.cpp  GL3_Cubemap.h  GL3_Drawable.cpp  GL3_Drawable.h  GL3_Enum.h  GL3_Exception.h  GL3_FrameCreator.cpp  GL3_FrameCreator.h  GL3_Framebuffer.cpp  GL3_Framebuffer.h  GL3_Object.cpp  GL3_Object.h  GL3_Renderer.cpp  GL3_Renderer.h  GL3_Shader.cpp  GL3_Shader.h  GL3_ShaderCreator.h  GL3_ShaderLoader.cpp  GL3_ShaderLoader.h  GL3_State.h  GL3_Texture.cpp  GL3_Texture.h  GL3_Texture2D.cpp  GL3_Texture2D.h  GL3_Texture3D.cpp  GL3_Texture3D.h  GL3_TextureCreator.cpp  GL3_TextureCreator.h  GL3_UnitShader.h  GL3_Viewport.h  gl3.h
source/core/graphics/GL3PLUS/: GL3_Context.cpp  GL3_Context.h  GL3_Drawable.h  GL3_Enum.h  GL3_Framebuffer.h  GL3_Object.h  GL3_Shader.cpp  GL3_Shader.h  GL3_State.h  GL3_Texture.cpp  GL3_Texture.h  GL3_UnitShader.h  gl3.h
source/core/graphics/GLES2/: GLES2_Context.cpp  GLES2_Context.h  GLES2_Drawable.cpp  GLES2_Drawable.h  GLES2_Framebuffer.h  GLES2_Object.h  GLES2_Shader.cpp  GLES2_Shader.h  GLES2_Texture.cpp  (+5 more)
source/core/input/: InputController.cpp  InputController.h  InputListener.cpp  InputListener.h  InputNames.h  InputState.h  KeyEvent.cpp  KeyEvent.h  MousePosEvent.h  MouseWheelEvent.cpp
source/core/math/: Interpolation.h  MVector.h  gml.h  interpolation.h  math.h  maths.h  matrix.h  matrix.tpp  matrixBase.h  matrixBase.tpp  matrixSpecial.h  quaternion.h  quaternion.tpp  vector.h  vector.tpp  vectorBase.tpp  vectorbase.h
source/core/platform/: CMakeLists.txt  Exception.h  File.h  FileException.h  FileLoader.cpp  FileLoader.h  GenericHandle.h  Platform.h  clib.h  genericHandle.h  platform.h  util.h
source/core/tests/: CMakeLists.txt
source/core/utils/: CMakeLists.txt  NotImplementedException.h
source/font/: CMakeLists.txt
source/gml/: CMakeLists.txt
source/gml/tests/: CMakeLists.txt  complex.h  mathTest.cpp  matrixTest.cpp  quaternionTest.cpp  vecXTest.cpp  vectorTest.cpp
source/graphics3d/: CMakeLists.txt  README.md
source/graphics3d/docs/: uml.drawio
source/gui/: CMakeLists.txt
source/image/: CMakeLists.txt
source/image/source/: CMakeLists.txt  image.cpp  image.h  imageWriter.h
source/math/: CMakeLists.txt
source/math/tests/: CMakeLists.txt  complex.h  mathTest.cpp  matrixTest.cpp  quaternionTest.cpp  vectorTest.cpp
source/modules/: CMakeLists.txt
source/modules/algo/: CMakeLists.txt  sceneGraph.cpp  sceneGraph.h
source/modules/font/: CMakeLists.txt  converter.cpp  converter.h  fileformat.h  font.h  fontHeader.h  ftMath.cpp  ftMath.h  loader.cpp  loader.h  shaders.h  text.cpp  text.h
source/modules/graphics2d/: CMakeLists.txt  renderer.cpp  renderer.h  sprite.cpp  sprite.h  spriteAnimation.cpp  spriteAnimation.h
source/modules/graphics3d/: CMakeLists.txt  camera.cpp  camera.h  light.h  material.cpp  material.h  mesh.h  resourceCache.h  resourceManager.h  scene.h  sceneRenderer.cpp  sceneRenderer.h  skybox.cpp  skybox.h
source/modules/gui/: Animation.cpp  Animation.h  CMakeLists.txt  InputManager.cpp  InputManager.h  Layouts.cpp  Layouts.h  animation.cpp  animation.h  button.cpp  button.h  core.h  entry.cpp  entry.h  fontmanager.cpp  fontmanager.h  frame.cpp  frame.h  gui.h  guiShader.frag  input.cpp  input.h  inputmanager.cpp  inputmanager.h  interface.h  label.cpp  label.h  layouts.h  master.cpp  master.h  renderer.cpp  renderer.h  root.h  rootWidget.cpp  shaders.h  textureManager.cpp  textureManager.h  texturemanager.cpp  texturemanager.h  widget.cpp  (+3 more)
source/modules/image/: CMakeLists.txt  bmp.cpp  bmp.h  enum.h  image.cpp  image.h  imageLoader.cpp  imageLoader.h  imageReader.cpp  imageReader.h  imageWriter.cpp  imageWriter.h  img.cpp  img.h  png.cpp  png.h
source/physics3d/: CMakeLists.txt  README.md
source/physics3d/docs/: uml_diagram.drawio
source/physics3d/tests/: CMakeLists.txt  collision.cpp
source/resource/: CMakeLists.txt
source/runtime/: CMakeLists.txt
source/tools/ImageViewer/: CMakeLists.txt  main.cpp
source/tools/SimpleWindow/: CMakeLists.txt  main.cpp
source/tools/guiEditor/: CMakeLists.txt  main.cpp
source/tools/sandbox/: CMakeLists.txt  InputListener.h  MovementListener.h  ProjectionView.h  app.h
source/tools/sandbox2d/: CMakeLists.txt  app.h  main.cpp
source/tools/skyboxViewer/: CMakeLists.txt  app.cpp  app.h  gui.cpp  gui.h  main.cpp
source/tools/test/: CMakeLists.txt  main.cpp
source/tools/yageApp/: AndroidManifest.xml  CMakeLists.txt  build.gradle
source/utils/: CMakeLists.txt
source/utils/tests/: CMakeLists.txt  stringsTest.cpp
tests/: CMakeLists.txt
tests/core-graphics/: CMakeLists.txt  contextTest.cpp  textureTest.cpp
tests/core-math/: matrixTest.cpp  quaterniontest.cpp  vectorTest.cpp
(+703 files in other folders)
